--- a/artical/templates/artical/index.html
+++ b/artical/templates/artical/index.html
@@ -1,14 +1,15 @@
 {% load staticfiles %}
 
 <!DOCTYPE HTML>
-<html lang="" >
-    <head>
-        <meta charset="UTF-8">
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Introduction · GitBook</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="description" content="">
-        <meta name="generator" content="GitBook 3.2.3">
+<html lang="">
+
+<head>
+    <meta charset="UTF-8">
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <title>Introduction · GitBook</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="">
+    <meta name="generator" content="GitBook 3.2.3">
 
 
 
@@ -18,19 +19,15 @@
 
 
 
-                <link rel="stylesheet" href="{% static "gitbook/gitbook-plugin-highlight/website.css" %}">
+    <link rel="stylesheet" href="{% static "gitbook/gitbook-plugin-highlight/website.css" %}">
 
 
 
-                <link rel="stylesheet" href="{% static "gitbook/gitbook-plugin-search/search.css" %}">
+    <link rel="stylesheet" href="{% static "gitbook/gitbook-plugin-search/search.css" %}">
 
 
 
-                <link rel="stylesheet" href="{% static "gitbook/gitbook-plugin-fontsettings/website.css" %}">
-
-
-
-
+    <link rel="stylesheet" href="{% static "gitbook/gitbook-plugin-fontsettings/website.css" %}">
 
 
 
@@ -50,174 +47,183 @@
 
 
 
-    <meta name="HandheldFriendly" content="true"/>
+
+
+
+
+    <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static "gitbook/images/apple-touch-icon-precomposed-152.png" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152"
+        href="{% static "gitbook/images/apple-touch-icon-precomposed-152.png" %}">
     <link rel="shortcut icon" href="{% static "gitbook/images/favicon.ico" %}" type="image/x-icon">
 
 
 
 
 
-    </head>
-    <body>
+</head>
 
-<div class="book">
-    <div class="book-summary">
+<body>
 
-
-<div id="book-search-input" role="search">
-    <input type="text" placeholder="Type to search(这个搜索栏并没有用)" />
-</div>
+    <div class="book">
+        <div class="book-summary">
 
 
-                <nav role="navigation">
+            <div id="book-search-input" role="search">
+                <input type="text" placeholder="Type to search(这个搜索栏并没有用)" />
+            </div>
 
 
-
-<ul class="summary">
+            <nav role="navigation">
 
 
 
-{% if latest_artical_list %}
-    <ul>
-    {% for artical in latest_artical_list %}
-
-        <li class="chapter " data-level="1.2" data-path="/artical/{{ artical.title }}">
-                <a href="{% url 'artical:slug' artical.title %}">
-                    {{ artical.created }} {{artical.title}}
-                </a>
-        </li>
-
-    {% endfor %}
-    </ul>
-{% else %}
-<ul>
-    <li class="chapter " data-level="1.2" data-path="">
-        没有文章~
-    </li>
-</ul>
-{% endif %}
-
-    <li class="divider"></li>
-
-    <li>
-        <a href="/admin/" target="blank" class="gitbook-link">
-            管理该页面
-        </a>
-    </li>
-</ul>
+                <ul class="summary">
 
 
-                </nav>
+
+                    {% if latest_artical_list %}
+                    <ul>
+                        {% for artical in latest_artical_list %}
+
+                        <li class="chapter " data-level="1.2" data-path="/artical/{{ artical.title }}">
+                            <a href="{% url 'artical:slug' artical.title %}">
+                                {{ artical.created }} {{artical.title}}
+                            </a>
+                        </li>
+
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                    <ul>
+                        <li class="chapter " data-level="1.2" data-path="">
+                            没有文章~
+                        </li>
+                    </ul>
+                    {% endif %}
+
+                    <li class="divider"></li>
+
+                    <li>
+                        <a href="/admin/" target="blank" class="gitbook-link">
+                            管理该页面
+                        </a>
+                    </li>
+                </ul>
 
 
-    </div>
+            </nav>
 
-    <div class="book-body">
+
+        </div>
+
+        <div class="book-body">
 
             <div class="body-inner">
 
 
 
-<div class="book-header" role="navigation">
+                <div class="book-header" role="navigation">
 
 
-    <!-- Title -->
-    <h1>
-        <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href="." >日记</a>
-    </h1>
-</div>
+                    <!-- Title -->
+                    <h1>
+                        <i class="fa fa-circle-o-notch fa-spin"></i>
+                        <a href=".">日记</a>
+                    </h1>
+                </div>
 
 
 
 
-                    <div class="page-wrapper" tabindex="-1" role="main">
-                        <div class="page-inner">
+                <div class="page-wrapper" tabindex="-1" role="main">
+                    <div class="page-inner">
 
-<div id="book-search-results">
-    <div class="search-noresults">
+                        <div id="book-search-results">
+                            <div class="search-noresults">
 
                                 <section class="normal markdown-section">
 
-                                <h1 id="my-awesome-book">个人博客主页</h1>
-<p>用于记录的个人博客.</p>
+                                    <h1 id="my-awesome-book">个人博客主页</h1>
+                                    <p>用于记录的个人博客.</p>
 
 
                                 </section>
 
-    </div>
-    <div class="search-results">
-        <div class="has-results">
+                            </div>
+                            <div class="search-results">
+                                <div class="has-results">
 
-            <h1 class="search-results-title"><span class='search-results-count'></span> results matching "<span class='search-query'></span>"</h1>
-            <ul class="search-results-list"></ul>
+                                    <h1 class="search-results-title"><span class='search-results-count'></span> results
+                                        matching "<span class='search-query'></span>"</h1>
+                                    <ul class="search-results-list"></ul>
 
-        </div>
-        <div class="no-results">
+                                </div>
+                                <div class="no-results">
 
-            <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
+                                    <h1 class="search-results-title">No results matching "<span
+                                            class='search-query'></span>"</h1>
 
-        </div>
-    </div>
-</div>
-
+                                </div>
+                            </div>
                         </div>
+
                     </div>
+                </div>
 
             </div>
 
 
 
 
-                <a href="shang-hai-zi-lai-shui-lai-zi-hai-shang.html" class="navigation navigation-next navigation-unique" aria-label="Next page: 上海自来水来自海上">
-                    <i class="fa fa-angle-right"></i>
-                </a>
+            <a href="shang-hai-zi-lai-shui-lai-zi-hai-shang.html" class="navigation navigation-next navigation-unique"
+                aria-label="Next page: 上海自来水来自海上">
+                <i class="fa fa-angle-right"></i>
+            </a>
 
 
 
+        </div>
+
+        <script>
+            var gitbook = gitbook || [];
+            gitbook.push(function () {
+                gitbook.page.hasChanged({ "page": { "title": "Introduction", "level": "1.1", "depth": 1, "next": { "title": "上海自来水来自海上", "level": "1.2", "depth": 1, "path": "shang-hai-zi-lai-shui-lai-zi-hai-shang.md", "ref": "shang-hai-zi-lai-shui-lai-zi-hai-shang.md", "articles": [] }, "dir": "ltr" }, "config": { "gitbook": "*", "theme": "default", "variables": {}, "plugins": [], "pluginsConfig": { "highlight": {}, "search": {}, "lunr": { "maxIndexSize": 1000000, "ignoreSpecialCharacters": false }, "sharing": { "facebook": true, "twitter": true, "google": false, "weibo": false, "instapaper": false, "vk": false, "all": ["facebook", "google", "twitter", "weibo", "instapaper"] }, "fontsettings": { "theme": "white", "family": "sans", "size": 2 }, "theme-default": { "styles": { "website": "styles/website.css", "pdf": "styles/pdf.css", "epub": "styles/epub.css", "mobi": "styles/mobi.css", "ebook": "styles/ebook.css", "print": "styles/print.css" }, "showLevel": false } }, "structure": { "langs": "LANGS.md", "readme": "README.md", "glossary": "GLOSSARY.md", "summary": "SUMMARY.md" }, "pdf": { "pageNumbers": true, "fontSize": 12, "fontFamily": "Arial", "paperSize": "a4", "chapterMark": "pagebreak", "pageBreaksBefore": "/", "margin": { "right": 62, "left": 62, "top": 56, "bottom": 56 } }, "styles": { "website": "styles/website.css", "pdf": "styles/pdf.css", "epub": "styles/epub.css", "mobi": "styles/mobi.css", "ebook": "styles/ebook.css", "print": "styles/print.css" } }, "file": { "path": "README.md", "mtime": "2018-12-05T03:49:03.466Z", "type": "markdown" }, "gitbook": { "version": "3.2.3", "time": "2018-12-05T04:12:57.860Z" }, "basePath": ".", "book": { "language": "" } });
+            });
+        </script>
     </div>
-
-    <script>
-        var gitbook = gitbook || [];
-        gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Introduction","level":"1.1","depth":1,"next":{"title":"上海自来水来自海上","level":"1.2","depth":1,"path":"shang-hai-zi-lai-shui-lai-zi-hai-shang.md","ref":"shang-hai-zi-lai-shui-lai-zi-hai-shang.md","articles":[]},"dir":"ltr"},"config":{"gitbook":"*","theme":"default","variables":{},"plugins":[],"pluginsConfig":{"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"fontsettings":{"theme":"white","family":"sans","size":2},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"}},"file":{"path":"README.md","mtime":"2018-12-05T03:49:03.466Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2018-12-05T04:12:57.860Z"},"basePath":".","book":{"language":""}});
-        });
-    </script>
-</div>
 
 
     <script src="{% static "gitbook/gitbook.js" %} "></script>
     <script src="{% static "gitbook/theme.js"  %} "></script>
 
 
-        <script src="{% static "gitbook/gitbook-plugin-search/search-engine.js"  %} "></script>
+    <script src="{% static "gitbook/gitbook-plugin-search/search-engine.js"  %} "></script>
 
 
 
-        <script src="{% static "gitbook/gitbook-plugin-search/search.js"  %} "></script>
+    <script src="{% static "gitbook/gitbook-plugin-search/search.js"  %} "></script>
 
 
 
-        <script src="{% static "gitbook/gitbook-plugin-lunr/lunr.min.js"  %} "></script>
+    <script src="{% static "gitbook/gitbook-plugin-lunr/lunr.min.js"  %} "></script>
 
 
 
-        <script src="{% static "gitbook/gitbook-plugin-lunr/search-lunr.js"  %} "></script>
+    <script src="{% static "gitbook/gitbook-plugin-lunr/search-lunr.js"  %} "></script>
 
 
 
-        <script src="{% static "gitbook/gitbook-plugin-sharing/buttons.js"  %} "></script>
+    <script src="{% static "gitbook/gitbook-plugin-sharing/buttons.js"  %} "></script>
 
 
 
-        <script src="{% static "gitbook/gitbook-plugin-fontsettings/fontsettings.js"  %} "></script>
+    <script src="{% static "gitbook/gitbook-plugin-fontsettings/fontsettings.js"  %} "></script>
 
 
 
-    </body>
+</body>
+
 </html>
-
